--- a/PhotoManager/PhotoManager/PhotoManager.csproj
+++ b/PhotoManager/PhotoManager/PhotoManager.csproj
@@ -52,6 +52,10 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\FileSystemStorage.cs" />
+    <Compile Include="Models\GroupEntry.cs" />
+    <Compile Include="Models\IPhotoStorage.cs" />
+    <Compile Include="Models\PhotoEntry.cs" />
     <Compile Include="Models\PhotosManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
